--- a/app/public/index.html
+++ b/app/public/index.html
@@ -24,9 +24,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Play Game Template online"
+      content="Play Présages online"
     />
-    <title>Game Template</title>
+    <title>Présages</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
